--- a/index.html
+++ b/index.html
@@ -1,7 +1,105 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+        crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/Content/style.css" />
+    <title>William J. Kirschner, Jr.</title>
+</head>
+
 <body>
-<h1>Coming Soon</h1>
-<p></p>
+
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="Content/img/logo.png" alt="you're WILLcome" width="100%">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#welcome">WELCOME
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section id="wrapper">
+        <section id="container">
+            <section id="main" class="rounded">
+
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                                <img src="/Content/img/will kirschner.jpg" title="William J Kirschner Jr" alt="William J Kirschner Jr" class="img-fluid rounded" />
+                                <hr>
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                                <h1>Hello, my name is Will</h1>
+                                <p>
+                                    I am a .NET software developer eager to positively impact society through web and software development. I'm a team-oriented
+                                    and self-motivated learner looking forward to marrying previous web design experience with full
+                                    stack capabilities.
+                                </p>
+                                <p>
+                                    I get most excited about working at an innovative organization that puts a strong emphasis on internal development and giving
+                                    back to the community. I'm looking forward to working with like minded individuals in a team
+                                    environment who are all ready to conquer the digital world.
+                                </p>
+                            </div>
+                        
+                        </div>
+                    </div>
+            </section>
+        </section>
+
+        <section id="footer">
+            <a href="mailto:will@williamkwebdesign.com" target="_blank"><i class="fas fa-at fa-3x"></i></a>
+            <a href="https://github.com/yourewillcome" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/williamkirschner/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
+            <a href="https://www.williamkwebdesign.com" target="_blank"><i class="fas fa-desktop fa-3x"></i></a>
+            <h1>William J. Kirschner, Jr.</h1>
+            <h2>< Full Stack .NET Developer /></h2>
+            <h3>&copy; 2018 <a href="https://www.williamkwebdesign.com" target="_blank">WKWD</a></h3>
+        </section>
+    </section>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
