--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="/Content/style.css" />
     <title>William J. Kirschner, Jr.</title>
@@ -55,40 +56,62 @@
         <section id="container">
             <section id="main" class="rounded">
 
-                    <div class="container">
-                        <div class="row">
+                <div class="container">
+                    <div class="row">
 
-                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                                <img src="/Content/img/will kirschner.jpg" title="William J Kirschner Jr" alt="William J Kirschner Jr" class="img-fluid rounded" />
-                                <hr>
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                                <h1>Hello, my name is Will</h1>
-                                <p>
-                                    I am a .NET software developer eager to positively impact society through web and software development. I'm a team-oriented
-                                    and self-motivated learner looking forward to marrying previous web design experience with full
-                                    stack capabilities.
-                                </p>
-                                <p>
-                                    I get most excited about working at an innovative organization that puts a strong emphasis on internal development and giving
-                                    back to the community. I'm looking forward to working with like minded individuals in a team
-                                    environment who are all ready to conquer the digital world.
-                                </p>
-                            </div>
-                        
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-5 text-center">
+                            <h1>Hello, my name is Will</h1>
+                            <hr>
+                            <img src="/Content/img/will kirschner.jpg" title="William J Kirschner Jr" alt="William J Kirschner Jr" class="img-fluid rounded"/>
                         </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-7 text-center">
+                            <p>
+                                I am a .NET software developer eager to positively impact society through web and software development. I'm a team-oriented
+                                and self-motivated learner looking forward to marrying previous web design experience with
+                                full stack capabilities.
+                            </p>
+                            <p>
+                                I get most excited about working at an innovative organization that puts a strong emphasis on internal development and giving
+                                back to the community. I'm looking forward to working with like minded individuals in a team
+                                environment who are all ready to conquer the digital world.
+                            </p>
+                        </div>
+
                     </div>
+                </div>
             </section>
         </section>
 
-        <section id="footer">
-            <a href="mailto:will@williamkwebdesign.com" target="_blank"><i class="fas fa-at fa-3x"></i></a>
-            <a href="https://github.com/yourewillcome" target="_blank"><i class="fab fa-github fa-3x"></i></a>
-            <a href="https://www.linkedin.com/in/williamkirschner/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
-            <a href="https://www.williamkwebdesign.com" target="_blank"><i class="fas fa-desktop fa-3x"></i></a>
-            <h1>William J. Kirschner, Jr.</h1>
-            <h2>< Full Stack .NET Developer /></h2>
-            <h3>&copy; 2018 <a href="https://www.williamkwebdesign.com" target="_blank">WKWD</a></h3>
+        <section id="footer" class="fixed-bottom">
+
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 text-center">
+                        <a href="mailto:will@williamkwebdesign.com" target="_blank">
+                            <i class="fas fa-at fa-2x"></i>
+                        </a>
+                        <a href="https://github.com/yourewillcome" target="_blank">
+                            <i class="fab fa-github fa-2x"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/williamkirschner/" target="_blank">
+                            <i class="fab fa-linkedin-in fa-2x"></i>
+                        </a>
+                        <a href="https://www.williamkwebdesign.com" target="_blank">
+                            <i class="fas fa-desktop fa-2x"></i>
+                        </a>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 text-center">
+                        <h1>William J. Kirschner, Jr.</h1>
+                        <h2>
+                            < Full Stack .NET Developer />
+                        </h2>
+                        <h3>&copy; 2018
+                            <a href="https://www.williamkwebdesign.com" target="_blank">WKWD</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
         </section>
     </section>
 
